Istio/securekc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-kc-service
  namespace: keycloak
  labels:
    app: keycloak
    app.kubernetes.io/managed-by: keycloak-operator
status:
  loadBalancer: {}
spec:
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: keycloak
    app.kubernetes.io/managed-by: keycloak-operator
  type: ClusterIP
