Istio/gateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak
  namespace: keycloak
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 700
      name: http
      protocol: HTTP
    hosts:
    - keycloak.abc.com
  - port:
      number: 743
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      #mode: PASSTHROUGH
      #credentialName: keycloak.abc.com 
      credentialName: ingress-cert
      #credentialName: keycloak-tls-secret
      minProtocolVersion: TLSV1_2
      maxProtocolVersion: TLSV1_3
      #cipherSuites:
      #- ECDHE-RSA-AES256-GCM-SHA384
      #- AES256-GCM-SHA384
      #- TLS_AES_256_GCM_SHA384
    hosts:
    - keycloak.mvp.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
  namespace: keycloak
spec:
  hosts:
  - keycloak.abc.com
  gateways:
  - keycloak
  http:
  - match:
    - uri: 
        exact: /
    route:
#    - destination:
#        host: example-kc-service
#        port:
#          number: 8443
    - destination:
        host: services
        port:
          number: 8080
